--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,8 +8,7 @@ block content
         input(placeholder="Password", name="password", type="password", required)
         input(type="submit", value="Login")
         br
-        a(href="https://github.com/login/oauth/authorize?client_id=03d39f950337bd29d9eb") Continue with Github &rarr;
+        a(href="/users/github/start") Continue with Github &rarr;
     hr
     div
         span Don't have an account? &nbsp;
-        a(href="/join") Create one now &rarr;
